--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
             <button id="btn-add" onclick="addTask()">Tambah</button>
         </div>
         <ul id="taskList"></ul>
+
+         <!-- Footer -->
+        <footer class="footer">
+            Made by : <span>Shdhz 🦈</span>
+        </footer>
     </div>
     <script src="script.js"></script>
 </body>
