fix style footer

--- a/index.html
+++ b/index.html
@@ -16,9 +16,9 @@
         </div>
         <ul id="taskList"></ul>
 
-         <!-- Footer -->
+        <!-- Footer -->
         <footer class="footer">
-            Made by : <span>Shdhz 🦈</span>
+            Made by : Shdhz <span>🦈</span>
         </footer>
     </div>
     <script src="script.js"></script>
