--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
         <h2>To-Do List</h2>
         <div class="input-container">
-            <input type="text" id="taskInput" placeholder="Tambah tugas..">
+            <input type="text" id="taskInput" placeholder="Tambah Judul Tugas..">
             <button id="btn-add" onclick="addTask()">Tambah</button>
         </div>
         <ul id="taskList"></ul>
